# organizer

./: .gitignore  Cargo.toml  LICENSE  README.md  data.json  test
.github/workflows/: main.yml
src/: data.rs  datatoiced.rs  fonts.rs  lib.rs  main.rs  periodic_task.rs  task.rs  tasktoiced.rs  time.rs  toiced.rs  views.rs
src/views/: list_view.rs  periodic_tasks_management.rs  summary_view.rs
