[package]
name = "organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
iced = "0.7.0"
serde = { version="1.0.145", features = ["derive"] }
serde_json = "1.0.89"
float-cmp = "0.9.0"